--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -1,47 +1,53 @@
 /* nav related styles */
 
-nav{
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 0px 200px;
 }
+
 /* shared styles*/
 /* body{
     font-family: 'Open Sans', sans-serif;
 } */
-body{
+body {
     font-family: 'Open Sans', sans-serif;
 }
-.nav-title{
+
+.nav-title {
     font-family: 'Open Sans', sans-serif;
     color: #181818;
     font-size: 45px;
     font-weight: 800;
 }
-.text-primary{
+
+.text-primary {
     color: #FD6E0A;
 }
-nav>ul{
+
+nav>ul {
     display: flex;
     align-items: center;
 }
 
-nav li{
+nav li {
     list-style: none;
     margin: 50px;
 }
-.button-primary{
+
+.button-primary {
     border-radius: 5px;
-background: #FD6E0A;
-border: 0px;
-font-size: 15px;
-font-style: normal;
-font-weight: 700;
-color: white;
-padding: 15px 30px;
+    background: #FD6E0A;
+    border: 0px;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 700;
+    color: white;
+    padding: 15px 30px;
 }
-nav a{
+
+nav a {
     text-decoration: none;
     color: #474747;
     font-family: 'Open Sans', sans-serif;
@@ -49,15 +55,66 @@ nav a{
 
 }
 
-.header{
+.header {
     background: #FFF8F3;
+    background-image: url(../images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
-.banner{
-    padding: 30px 30px 30px 150px ;
+
+.banner {
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
-.profile-pic{
+
+.profile-pic {
     width: 400px;
-height: 400px;
+    height: 400px;
+}
+
+.banner-greeting {
+    font-size: 45px;
+    color: #474747;
+    font-weight: 600px;
+    margin-bottom: 0px;
+}
+
+.banner-title {
+    font-size: 85px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+/* .banner-discription{
+    margin: 0px;
+    /* width: 585px; */
+}
+
+*/ .banner-content {
+    max-width: 500px;
+}
+
+/* main section styles */
+.about {
+    padding: 130px;
+    background-color: #FFF8F3;
+    border-radius: 10px;
+    margin: 130px 230px;
+}
+
+.section-title {
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+
+.section-description {
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
 }
