--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -98,6 +98,10 @@ nav a {
 }
 
 /* main section styles */
+main{
+    /* max-width: 1140px; */
+    margin: 0px auto;
+}
 .about {
     padding: 130px;
     background-color: #FFF8F3;
@@ -117,4 +121,11 @@ nav a {
     text-align: center;
     font-size: 18px;
     font-weight: 400;
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
 }
