--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -98,10 +98,11 @@ nav a {
 }
 
 /* main section styles */
-main{
+main {
     /* max-width: 1140px; */
     margin: 0px auto;
 }
+
 .about {
     padding: 130px;
     background-color: #FFF8F3;
@@ -122,10 +123,20 @@ main{
     font-size: 18px;
     font-weight: 400;
 }
-.about-info-container{
+
+.about-info-container {
     display: flex;
     justify-content: space-around;
 }
-.about-info{
+
+.about-info {
     text-align: center;
+}
+
+#what-i-do-description {
+    padding: 30px 170px;
+    margin: 130px 230px;
+}
+.skill-container{
+    display: flex;
 }
